
SET(TESTS_DIR "${SOURCE_DIR}/tests")

SET(ERTESTS_BINARIES
    test_url
)

INCLUDE_DIRECTORIES("${THIRDPARTY_DIR}/gtest/include"
)

FOREACH(testName ${ERTESTS_BINARIES})
    ADD_EXECUTABLE(${testName} "${TESTS_DIR}/${testName}.cpp" ${EAGLE_SOURCES})
    TARGET_LINK_LIBRARIES(${testName} ${EAGLE_LDFLAGS} gtest)
ENDFOREACH()
